--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "^11.11.1",
+    "antd": "^5.6.1",
+    "axios": "^1.4.0",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "17.0.2"
   }
 }
