--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yarn": "^1.22.19"
   }
 }
