--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "17.0.2",
+    "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.12.1"
   }
