--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.8",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "17.0.2",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.12.1"
+    "react-router-dom": "^6.13.0"
   }
 }
