--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.12.1"
+    "react-router-dom": "^6.12.1",
+    "vis-data": "^7.1.6",
+    "vis-network": "^9.1.6"
   }
 }
