--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "17.0.2",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.13.0"
-  }
+    "react-modal": "^3.16.1"
+    }
 }
