--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.12.1",
-    "vis-data": "^7.1.6",
     "react-spring": "^9.7.1",
-    "vis-network": "^9.1.6",
-    "vis": "^4.21.0-EOL"
+    "vis": "^4.21.0-EOL",
+    "vis-data": "^7.1.6",
+    "vis-network": "^9.1.6"
   }
 }
