--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "17.0.2",
-    "react-modal": "^3.16.1"
-    }
+    "react-modal": "^3.16.1",
+    "vis-data": "^7.1.6",
+    "vis-network": "^9.1.6"
+  }
 }
