--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.12.1",
     "vis": "^4.21.0-EOL",
     "vis-data": "^7.1.6",
