--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "animate.css": "^4.1.1",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
